# tarotrs

./: .gitignore  Cargo.toml
src/: card.rs  deck.rs  lib.rs  main.rs  shuffle.rs  spread.rs  tarot.rs  tui.rs
src/tarot/: card.rs  deck.rs
