[package]
name = "tarotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
itertools = "0.10.5"
rand = "0.8.5"
roman = "0.1.6"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
