[package]
name = "tarotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
dirs = "5.0.0"
itertools = "0.10.5"
rand = "0.8.5"
roman = "0.1.6"
serde = { version = "1.0.152", features = ["derive"] }
strum = "0.24.1"
strum_macros = "0.24.3"
toml = "0.7.2"
