[package]
name = "tarotrs"
version = "0.1.0"
edition = "2021"
default-run = "tui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tui"
path = "src/tui.rs"

[dependencies]
cursive = "0.20.0"
dirs = "5.0.0"
itertools = "0.12.1"
rand = "0.8.5"
roman = "0.1.6"
serde = { version = "1.0.197", features = ["derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1.0.57"
toml = "0.8.1"
